--- a/jobrequest/templates/task_request_list_director.html
+++ b/jobrequest/templates/task_request_list_director.html
@@ -31,6 +31,7 @@
                     <th>Çalışma Türü</th>
                     <th>Alınacak Kişi Sayısı</th>
                     <th>Oluşturulma Tarihi</th>
+                    <th>Sorumlu İK Personeli</th>
                     <th>Durum</th>
                     <th>Detay</th>
                     <th>Onay</th>
@@ -55,6 +56,13 @@
                     <td>{{ task.work_type }}</td>
                     <td>{{ task.desired_personnel_count }}</td>
                     <td>{{ task.created_at }}</td>
+                    <td>
+                        {% for profile in profiles %}
+                            {% if profile.Location == task.location%}
+                             {{ profile.user.first_name }} {{ profile.user.last_name }}
+                            {% endif %}
+                        {% endfor %}
+                    </td>
                     <td>{{ task.request_status_organization_manager }}</td>
                     <td>
                         <a href="{% url 'task_request_detail' task.pk %}" class="btn btn-info btn-sm">Detay</a>
