--- a/jobrequest/templates/task_request_list.html
+++ b/jobrequest/templates/task_request_list.html
@@ -34,6 +34,7 @@
                     <th>Çalışma Türü</th>
                     <th>Alınacak Kişi Sayısı</th>
                     <th>Oluşturulma Tarihi</th>
+                    <th>Sorumlu İK Personeli</th>
                     <th>Durum</th>
                     <th>Aday Atama</th>
                     <th>Detay</th>
@@ -59,6 +60,13 @@
                     <td>{{ task.desired_personnel_count }}</td>
                     <td>{{ task.created_at }}</td>
                     <td>{{ task.request_status_organization_manager }}</td>
+                    <td>
+                        {% for profile in profiles %}
+                            {% if profile.Location == task.location%}
+                             {{ profile.user.first_name }} {{ profile.user.last_name }}
+                            {% endif %}
+                        {% endfor %}
+                    </td>
                     <td>
                         <a href="{% url 'assign_candidates' job_request_id=task.pk %}" class="btn btn-warning btn-sm">Aday Atama</a>
                     </td>
